<resources>
    <string name="app_name">ICT Grade 1 Learning</string>
    <string name="welcome_message">Hello Friends! My name is Kimo, I will guide you throughout your ICT Skills book.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_title">Home</string>
    <string name="chapters_title">All Chapters</string>
    <string name="progress_title">My Progress</string>
    <string name="activities_title">Activities</string>
    <string name="settings_title">Settings</string>
    <string name="help_title">Help</string>
    <!-- Add to strings.xml -->
    <string name="overall_progress">Overall Progress</string>
    <string name="chapter_progress">Chapter Progress</string>
    <string name="achievements">Achievements</string>
    <string name="lessons_completed">%d/%d lessons</string>
    <string name="progress_percentage">%d%%</string>
</resources>