<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_title" />
        <item
            android:id="@+id/nav_chapters"
            android:icon="@drawable/ic_book"
            android:title="@string/chapters_title" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_progress"
            android:title="@string/progress_title" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_activities"
            android:title="@string/activities_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_title" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help_title" />
    </group>
</menu>